tests/snapshots/integration__integration_tests__merge__readme_example_hooks_post_create.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature-x
    - "--force"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRunning project post-create [1minstall[22m:[39m
[107m [0m  [2m[0m[2m[34muv[0m[2m sync

  Resolved 24 packages in 145ms
  Installed 24 packages in 1.2s
✅ [32m[32mCreated new worktree for [1mfeature-x[22m from [1mmain[22m @ [1m[REPO].feature-x[39m[22m[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
🔄 [36mRunning project post-start [1mdev[22m:[39m
[107m [0m  [2m[0m[2m[34muv[0m[2m run dev
